<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_reports"
            android:title="@string/nav_reports" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_inventory"
            android:title="@string/nav_inventory" />

        <item
            android:id="@+id/nav_inventory_list"
            android:title="@string/nav_inventory_list" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_add_member"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_member_list"
            android:title="@string/nav_settings" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout" />

</menu>
